[gd_scene load_steps=78 format=2]

[ext_resource path="res://Characters/Pink_FSM.gd" type="Script" id=1]
[ext_resource path="res://Characters/Pink.gd" type="Script" id=2]
[ext_resource path="res://Characters-Sprite/1 Pink_Monster/Pink_Monster_Attack2_6.png" type="Texture" id=3]
[ext_resource path="res://Characters-Sprite/2 Owlet_Monster/Owlet_Monster_Jump_8.png" type="Texture" id=4]
[ext_resource path="res://UI/HealthBar_player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Characters-Sprite/1 Pink_Monster/Pink_Monster_Throw_4.png" type="Texture" id=6]
[ext_resource path="res://Characters/Camera2D.gd" type="Script" id=7]
[ext_resource path="res://Characters-Sprite/1 Pink_Monster/Pink_Monster_Walk+Attack_6.png" type="Texture" id=8]
[ext_resource path="res://Characters-Sprite/1 Pink_Monster/Pink_Monster_Death_8.png" type="Texture" id=9]
[ext_resource path="res://Characters-Sprite/1 Pink_Monster/Pink_Monster_Hurt_4.png" type="Texture" id=10]
[ext_resource path="res://Characters-Sprite/1 Pink_Monster/Pink_Monster_Idle_4.png" type="Texture" id=11]
[ext_resource path="res://Characters-Sprite/1 Pink_Monster/Pink_Monster_Push_6.png" type="Texture" id=12]
[ext_resource path="res://Fonts/Kaph-Regular.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://Characters-Sprite/1 Pink_Monster/Pink_Monster_Attack1_4.png" type="Texture" id=16]
[ext_resource path="res://Characters-Sprite/1 Pink_Monster/Pink_Monster_Jump_8.png" type="Texture" id=17]
[ext_resource path="res://Characters-Sprite/1 Pink_Monster/Pink_Monster_Run_6.png" type="Texture" id=18]

[sub_resource type="Animation" id=126]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("attackArea/attackCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=127]
resource_name = "attack_1"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack_1" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("attackArea/attackCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=128]
resource_name = "attack_2"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack_2" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("attackArea/attackCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=129]
resource_name = "attack_run"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack_run" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("attackArea/attackCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=130]
resource_name = "dead"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "dead" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=131]
resource_name = "hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "hurt" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=132]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=133]
resource_name = "jump"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "jump" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4 ]
}

[sub_resource type="Animation" id=134]
resource_name = "run"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "run" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=135]
resource_name = "skill_1"
length = 0.35
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "skill_1" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=136]
resource_name = "skill_2"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "skill_2" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=137]
resource_name = "skill_3"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "skill_3" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="AtlasTexture" id=145]
atlas = ExtResource( 16 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=146]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=147]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=148]
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=149]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=150]
atlas = ExtResource( 9 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=151]
atlas = ExtResource( 9 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=152]
atlas = ExtResource( 9 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=153]
atlas = ExtResource( 9 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=154]
atlas = ExtResource( 9 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=155]
atlas = ExtResource( 9 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=156]
atlas = ExtResource( 9 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 4 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=157]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=158]
atlas = ExtResource( 10 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=159]
atlas = ExtResource( 10 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=160]
atlas = ExtResource( 10 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=161]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=162]
atlas = ExtResource( 11 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=163]
atlas = ExtResource( 11 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=164]
atlas = ExtResource( 11 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=165]
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=166]
atlas = ExtResource( 17 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=167]
atlas = ExtResource( 17 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=168]
atlas = ExtResource( 17 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=169]
atlas = ExtResource( 17 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=170]
atlas = ExtResource( 17 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=171]
atlas = ExtResource( 17 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=172]
atlas = ExtResource( 17 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=173]
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=174]
atlas = ExtResource( 18 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=175]
atlas = ExtResource( 18 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=176]
atlas = ExtResource( 18 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=177]
atlas = ExtResource( 18 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=178]
atlas = ExtResource( 18 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=179]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=180]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=181]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=182]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=183]
atlas = ExtResource( 12 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=184]
atlas = ExtResource( 12 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=185]
atlas = ExtResource( 16 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=186]
atlas = ExtResource( 16 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=138]
animations = [ {
"frames": [ SubResource( 145 ) ],
"loop": true,
"name": "attack_1",
"speed": 5.0
}, {
"frames": [ SubResource( 146 ), SubResource( 147 ) ],
"loop": true,
"name": "attack_2",
"speed": 5.0
}, {
"frames": [ SubResource( 148 ) ],
"loop": true,
"name": "attack_run",
"speed": 5.0
}, {
"frames": [ SubResource( 149 ), SubResource( 150 ), SubResource( 151 ), SubResource( 152 ), SubResource( 153 ), SubResource( 154 ), SubResource( 155 ), SubResource( 156 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ SubResource( 157 ), SubResource( 158 ), SubResource( 159 ), SubResource( 160 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ SubResource( 161 ), SubResource( 162 ), SubResource( 163 ), SubResource( 164 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 165 ), SubResource( 166 ), SubResource( 167 ), SubResource( 168 ), SubResource( 169 ), SubResource( 170 ), SubResource( 171 ), SubResource( 172 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 173 ), SubResource( 174 ), SubResource( 175 ), SubResource( 176 ), SubResource( 177 ), SubResource( 178 ) ],
"loop": false,
"name": "run",
"speed": 5.0
}, {
"frames": [ SubResource( 179 ), SubResource( 180 ), SubResource( 181 ), SubResource( 182 ) ],
"loop": true,
"name": "skill_1",
"speed": 5.0
}, {
"frames": [ SubResource( 183 ), SubResource( 184 ) ],
"loop": true,
"name": "skill_2",
"speed": 5.0
}, {
"frames": [ SubResource( 185 ), SubResource( 186 ) ],
"loop": true,
"name": "skill_3",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=139]
extents = Vector2( 10.5, 12.5 )

[sub_resource type="DynamicFont" id=140]
size = 11
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 15 )

[sub_resource type="RectangleShape2D" id=141]
extents = Vector2( 9.5, 10 )

[node name="Pink" type="KinematicBody2D" groups=["player"]]
scale = Vector2( 2, 2 )
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )

[node name="Pink_FSM" type="Node" parent="."]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 126 )
anims/attack_1 = SubResource( 127 )
anims/attack_2 = SubResource( 128 )
anims/attack_run = SubResource( 129 )
anims/dead = SubResource( 130 )
anims/hurt = SubResource( 131 )
anims/idle = SubResource( 132 )
anims/jump = SubResource( 133 )
anims/run = SubResource( 134 )
anims/skill_1 = SubResource( 135 )
anims/skill_2 = SubResource( 136 )
anims/skill_3 = SubResource( 137 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 138 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.5, 3.5 )
shape = SubResource( 139 )

[node name="currentState" type="Label" parent="."]
margin_left = -18.0
margin_top = -21.0
margin_right = 27.0
margin_bottom = -7.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = SubResource( 140 )
text = "state"
align = 1
valign = 1

[node name="attackArea" type="Area2D" parent="." groups=["player_attack"]]

[node name="attackCollision" type="CollisionShape2D" parent="attackArea"]
position = Vector2( 19.5, 3 )
shape = SubResource( 141 )
disabled = true

[node name="TransformTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="WaterballTimer2" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="WaterballTimer3" type="Timer" parent="."]
wait_time = 0.55
one_shot = true

[node name="canEarthspike" type="RayCast2D" parent="."]
position = Vector2( 29, 16.5 )
enabled = true
cast_to = Vector2( 50, 0 )

[node name="attackCD" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -63.5 )
current = true
limit_bottom = 100
smoothing_enabled = true
script = ExtResource( 7 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthBar_player" parent="CanvasLayer" instance=ExtResource( 5 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -2.0
margin_top = 2.0
margin_right = 1277.0
margin_bottom = 724.0
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="body_entered" from="attackArea" to="." method="_on_attackArea_body_entered"]
[connection signal="timeout" from="TransformTimer" to="." method="_on_TransformTimer_timeout"]
[connection signal="timeout" from="WaterballTimer2" to="." method="_on_WaterballTimer_timeout"]
[connection signal="timeout" from="WaterballTimer3" to="." method="_on_WaterballStopTimer_timeout"]
[connection signal="timeout" from="attackCD" to="." method="_on_attackCD_timeout"]
